endpoint to list convos is ready
